version3/chapter13/sample-fsgroup.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-fsgroup
spec:
  # マウントするボリュームのグループを変更できる
  securityContext:
    fsGroup: 1001
  containers:
  - image: nginx:1.16
    name: nginx-container
    volumeMounts:
    - mountPath: /cache
      name: cache-volume
  volumes:
  - name: cache-volume
    # これわからんやつ
    emptyDir: {}
