version3/chapter13/sample-nonroot.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-nonroot
spec:
  securityContext:
    runAsNonRoot: true
  containers:
  - image: nginx-container
    image: nginx:1.16
