version3/chapter13/sample-podpreset-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-preset-pod
  labels:
    app: podpreset
spec:
  containers:
  - name: nginx-container
    image: nginx:1.16
