version3/chapter13/sample-serviceaccont-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: sample-serviceaccount-pod
  namespace: default
spec:
  serviceAccountName: sample-serviceaccount
  containers:
  - name: nginx-container
    image: nginx:1.16
