version3/chapter13/sample-allow-all-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-all-networkpolicy
spec:
  podSelector: {}
  # 全て許可
  egress:
  - {}
  # 全て許可
  ingress:
  - {}
  policyTypes:
  - Ingress
  - Egress
