version3/chapter13/sample-deny-all-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-networking
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  - Egress
