version3/chapter13/sample-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: sample-networkpolicy
  namespace: default # NetworkingPolicyを作成するNamespaceを指定
spec:
  podSelector:
    # 設定する対象のPodをここに書く
    # ラベルセレクタなので複数Podを対象にできる
  policyTypes:
  - Ingress # Ingressルールを作成する場合明示
  - Egress # Egressルールを作成する場合明示
  ingress:
  - from:
      # Ingressルールをここに書く
    ports:
      # このIngressルールで許可する受信Port番号とプロトコルを書く
  egress:
  - to:
      # Egressルールをここに書く
    ports:
      # このEgressルールで許可する宛先Port番号とプロトコルを書く
